feat: production-ready backend complete
✅ Features implementadas:
- Paginación en endpoints de actividades
- Cambio de contraseña
- Spring Boot Actuator (health checks)
- Rate limiting (60 req/min)
- Configuración para producción
- Security hardening completo

✅ Backend 100% funcional:
- JWT Authentication
- OAuth2 Strava integration
- CRUD completo con validación
- Health monitoring activo
- Production-ready